Ensure that part table action bar dont overlap our navbar dropdowns

--- a/assets/css/app/tables.css
+++ b/assets/css/app/tables.css
@@ -24,7 +24,7 @@
 .sticky-select-bar {
     position: sticky;
     top: 120px;
-    z-index: 3000; /* Ensure the bar is above other content */
+    z-index: 1000; /* Ensure the bar is above other content */
 }
 
 /****************************************
